# FASTAPI-Product-Table

./: .env  .env.example  DockerFile  README.1md  README.md  app.py  auth.py  database.py  docker-compose.yml  email_utils.py  init_db.py  inventory_crud.py  main_app.py  models.py  pyproject.toml  render.yaml  requirements.txt  schema.sql
.github/src/test/java/com/company/inventory/: AppTest.java
Springboot CRUD Project/: README.txt
Springboot CRUD Project/demo/: HELP.md  pom.xml
Springboot CRUD Project/demo/src/main/java/com/example/demo/: Product.java  ProductController.java  ProductRepository.java  ProductService.java
Springboot CRUD Project/demo/src/main/resources/: application.properties
inventory_alerts/: db.py  emailer.py
inventory_alerts/routers/: read-open-alerts.py  read-update-alert-recipients.py  read-update-inventory-levels.py  read-update-product-thresholds.py  read-update-products.py
inventory_alerts/sql/: 001.schema.sql  002_seed_demo.sql
static/: style.css
templates/: admin.html  base.html  index.html  login.html  register.html
tests/: test_smoke.py
