[project]
name = "postgres-inventory-alerts"
version = "0.1.0"
description = "Postgres low-stock alerts with LISTEN/NOTIFY + SMTP email worker"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "psycopg[binary]>=3.2.0",
]

[project.scripts]
inventory-alerts = "inventory_alerts.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
